ML ex1 code, and add gitignore file

--- a/MachineLearning/code/ex1-linear-regression/my_code_ex1.ipynb
+++ b/MachineLearning/code/ex1-linear-regression/my_code_ex1.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Jupyter 机器学习环境搭建"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Mac：[Mac 10.13 安装 Python-3.6.8 和 IPython-Notebook](https://dlonng.com/posts/ipynb-install)\n",
+    "- Windows：待更新\n",
+    "- Ubuntu：待更新\n",
+    "- Other Linux：待更新"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 一、读取原始数据"
    ]
   },
@@ -193,8 +210,8 @@
     "    ones = pd.DataFrame({'ones': np.ones(len(df))})\n",
     "    # 合并全 1 向量作为元素数据第一列，axis = 0 按行合并，anix = 1 按列合并\n",
     "    data = pd.concat([ones, df], axis=1)\n",
-    "    # ???\n",
-    "    return data.iloc[:, :-1].iloc[:, :].values"
+    "    \n",
+    "    return data.iloc[:, :-1].values"
    ]
   },
   {
@@ -549,7 +566,6 @@
     "def gradient(theta, X, y):\n",
     "    m = X.shape[0]\n",
     "    \n",
-    "    # 为什么顺序反过来了???\n",
     "    inner = X.T @ (X @ theta - y)\n",
     "    \n",
     "    return inner / m"
