add ros node lidar_camera_fusion

--- a/SemanticMap/语义地图构建框架.md
+++ b/SemanticMap/语义地图构建框架.md
@@ -6,9 +6,11 @@
 
 ## 〇、项目语义地图构建框架
 
+获取数据 -> 联合标定 -> 融合语义构建局部地图 -> 增量式构建全局八叉树地图 -> 地图细化
+
 ### 0.1 构建步骤
 
-0. 数据获取及预处理 
+0. 数据获取及预处理 - ok
    - ZED 相机：驱动，ROS 获取节点数据
    - 激光雷达：驱动，ROS 获取节点数据
    - 数据预处理：图像，点云滤波等
@@ -49,7 +51,7 @@ ZED 使用方法：安装 ZED SDK 和 ROS 包即可使用
 
 雷达相机外参：Autoware 开源标定工具
 
-kalibr：
+kalibr：IMU - Camera 联合标定
 
 #### 0.2.4 更新体素栅格
 
@@ -141,4 +143,5 @@ kalibr：
 
 1. ROS
 2. 标定技术
-3. ...
+3. 八叉树
+4. 雷达和 ZED 相机的配置，使用
