--- a/SemanticMap/语义地图构建框架.md
+++ b/SemanticMap/语义地图构建框架.md
@@ -95,7 +95,7 @@ kalibr：IMU - Camera 联合标定
 2. 使用 RefineNet CNN 方法对图像进行 2D 语义分割
 3. 增量式语义标注（非八叉树结构）
    1. 相机雷达进行标定，将雷达数据投影到图像进行坐标对齐
-   2. 使用欧拉聚类和随机森林进行点云分类误差最小化
+   2. 使用欧拉聚类和随机森林进行点云分类误差最小化（建图前的处理）
    3. 使用贝叶斯更新进行语义信息融合
 4. 地图细化
    1. 使用空间推理来纠正标签的空间分布
