add euc cluster

--- a/SemanticMap/语义地图构建框架.md
+++ b/SemanticMap/语义地图构建框架.md
@@ -85,7 +85,7 @@ kalibr：IMU - Camera 联合标定
 
 如何构建局部地图？使用 3D 激光还是视觉？还是两者融合？因为激光雷达和双目相机都能产生点云数据
 
-这部分需不需要我来完成，还是由李鑫师兄已经完成了，我直接拿局部地图过来融合语义
+使用激光，李鑫师兄提供。
 
 ## 一、Towards a Meaningful 3D Map Using a 3D Lidar and a Camera
 
