add calibr tool kit pdf

--- a/PaperNote/国外环境感知技术调研.md
+++ b/PaperNote/国外环境感知技术调研.md
@@ -16,21 +16,23 @@
 - 以色列卫士无人平台
 - Talon（魔爪）军用地面无人平台
 
-
-
 参考资料：
 
 - [http://www.81it.com/2019/0326/9382.html](http://www.81it.com/2019/0326/9382.html)
 
 ## 二、环境感知技术路径
 
+总结别人用的什么技术实现。
+
 ### 2.1 传感器标定
 
-### 2.2 传感器融合感知
+### 2.2 环境感知
+
+图像和点云单独或者融合：
 
 - 道路识别
 - 障碍物检测
-- 目标检测与跟踪
+- 目标跟踪
 
 ### 2.3 环境地图
 
@@ -42,8 +44,6 @@
 - 非接触性战斗
 - 对战场态势的侦察与跟踪
 - 运输、侦察、引导
-
-
 
 参考资料：
 
