--- a/PaperNote/国外环境感知技术调研.md
+++ b/PaperNote/国外环境感知技术调研.md
@@ -2,34 +2,29 @@
 
 [TOC]
 
-## 一、现状和趋势
+## 0、资料查找
 
-### 1.1 国外地面无人系统
+- 论文 -> 国外无人平台
+- 国外无人平台 -> 论文
 
-- PackBot
-- SMSS
-- AvantGuard
-- Bigdog
-- Gladiator
-- Sword
-- 英国特拉卡尔 Trakkar
-- 美国黑骑士的履带式无人车
-- 俄罗斯 Platforma-M
-- 俄罗斯狼 - 2 （Volk-2）
-- Crusher（破碎者）无人车
-- 以色列卫士无人平台
-- Talon（魔爪）军用地面无人平台
+## 一、环境感知现状和趋势
+
+### 1.1 国外地面无人系统（查看 wiki）
+
+- [PackBot](https://en.wikipedia.org/wiki/PackBot)
+- [Talon](https://www.army-technology.com/projects/talon-tracked-military-robot/)
+- [Bigdog](https://robots.ieee.org/robots/bigdog/?gallery=interactive1)
+- [Bigdog wiki](https://en.wikipedia.org/wiki/BigDog)
 
 参考资料：
 
 - [http://www.81it.com/2019/0326/9382.html](http://www.81it.com/2019/0326/9382.html)
-
-### 1.2 发展现状
-
 - https://www.sohu.com/a/284792819_628943
 - http://www.chinaequip.com.cn/bg/2842.html
+- [UGV Wiki](https://en.wikipedia.org/wiki/Unmanned_ground_vehicle#Examples)
+- [Army-Guide](http://www.army-guide.com/eng/index.php)
 
-### 1.3 发展趋势
+### 1.2 国外典型军用
 
 ## 二、环境感知技术路径
 
@@ -41,7 +36,7 @@
   - 障碍物检测
   - 目标跟踪
   - ...
-
+- 位姿估计
 - 环境地图
 
 ### 2.1 Environmental Perceptionand Sensor Data Fusion for Unmanned Ground Vehicle (2013)
