update perception doc

--- a/PaperNote/国外环境感知技术调研.md
+++ b/PaperNote/国外环境感知技术调研.md
@@ -178,6 +178,28 @@ RCTA 计划是 ARL 与学术和行业合作伙伴组成的联盟，该计划于 
 3. 数据扩充
 4. 模型训练与评估
 
+### 2.8 Achieving integrated convoys: Cargo Unmanned Ground Vehicle development and experimentation（2013 USA Cargo）
+
+#### 2.8.1 地面平台
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/UGV_cargo.png)
+
+#### 2.8.2 系统软件架构
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/system_arch.png)
+
+#### 2.8.3 感知模块（激光雷达 + 毫米波雷达）
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/terrain_deection.png)
+
+1. 激光雷达与毫米波融合
+2. 地面检测：机器学习
+3. 地面分类：机器学习
+4. 移动障碍物检测：卡尔曼滤波
+5. 构建代价地图
+
+
+
 ## 三、军事应用前景
 
 - 安全距离外完成侦查监视、爆炸物探测与处理，路线清除，放射物探测等危险任务
