semantic map build

--- a/SemanticMap/大范围语义地图构建框架.md
+++ b/SemanticMap/大范围语义地图构建框架.md
@@ -10,7 +10,10 @@
 - 数据预处理
 - lidar_camera_fusion
 - 点云分割，融合误差最小化？
-- 语义融合？
+- 递归贝叶斯语义融合是在单帧中做？还是要修改八叉树库的数据节点？
+- 融合 Alpha 通道作为 label 的不确定性概率？
+- 标签概率的不确定性？
+- 语义分割会返回每个像素的 label score？
 
 ## 三、八叉树地图构建
 
