--- a/SemanticMap/semantic_octomap_docs/semantic_map/前方局部地图动态构建.md
+++ b/SemanticMap/semantic_octomap_docs/semantic_map/前方局部地图动态构建.md
@@ -1,9 +1,9 @@
 ## 动态载入部分局部地图
-随着机器人本体的运动，实时动态载入前方更远处的地图，丢掉后方远处的历史地图。这对在线地图结构的灵活性要求比较高，如果基于八叉树，那么需要作片区域剪枝及插入的操作，效率不一定高。
+随着机器人本体的运动，实时动态载入前方更远处的地图，丢掉后方远处的历史地图，这对在线地图结构的灵活性要求比较高，如果基于八叉树，那么需要作片区域剪枝及插入的操作，效率不一定高。
 
 ### 考虑的方法
 
-可以修剪或者删除不需要的区域。
+可以修剪或者删除不需要的区域，如何删除不需要的区域？
 
 
 
