--- a/SemanticMap/大范围语义地图构建框架.md
+++ b/SemanticMap/大范围语义地图构建框架.md
@@ -1,11 +1,55 @@
-# 大范围语义地图构建框架
+# 语义地图构建工作计划
 
-## 一、雷达相机标定
+## 一、查资料
+
+### 1.1 Paper
+
+项目相关的几篇大范围语义建图的论文。
+
+### 1.2 Github
+
+- octomap_server
+- semantic_slam
+
+## 二、确定技术路线与框架
+
+### 2.1 雷达相机标定
+
+Autoware
+
+### 2.2 语义分割
+
+LED-Net
+
+### 2.3 语义融合
+
+递归 Bayes 更新
+
+### 2.4 局部地图构建
+
+暂时没想到方法
+
+### 2.5 全局地图构建
+
+- octomap_generator
+
+### 2.6 地图细化
+
+- 滤波
+- 去除运动轨迹
+
+## 三、分模块编程实现
+
+
+
+
+
+## 雷达相机标定
 
 - 相机内参标定 - ok
 - 雷达相机联合标定 - ok
 
-## 二、图像点云数据融合
+## 图像点云数据融合
 
 - 数据预处理
 - lidar_camera_fusion
@@ -15,13 +59,8 @@
 - 标签概率的不确定性？
 - 语义分割会返回每个像素的 label score？
 
-## 三、八叉树地图构建
+## 八叉树地图构建
 
 - octomap 库
 - octomap_server 建图包
 -  [pcl_outofcore](https://pointclouds.org/documentation/group__outofcore.html)
-
-## 四、全局地图细化
-
-- 修正错误标签？
-- 去除动态物体运动轨迹？
