--- a/SemanticMap/semantic_octomap_docs/semantic_map/前方局部地图动态构建.md
+++ b/SemanticMap/semantic_octomap_docs/semantic_map/前方局部地图动态构建.md
@@ -3,9 +3,10 @@
 
 ### 考虑的方法
 
-可以修剪或者删除不需要的区域，如何删除不需要的区域？
+- 可以修剪或者删除不需要的区域，如何删除不需要的区域？
+- 在每个体素内部设置显示时间，超过当前时间一定阈值就不显示体素？
 
-
+### OcTreeStamped?
 
 参考博客：
 
