--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -110,5 +110,61 @@ $$
 
 #### 3.3.3 3D 投影
 
-在融合语义之前，需要将相机坐标系与雷达坐标系进行对齐，对齐的方法对雷达和相机进行外参标定，以此得到 2 者之间的旋转和平移矩阵，另一个错误来源是由于图像和点云之间存在的不对准，这可能导致分配错误的标签。针对此问题，提出了一种基于单个扫描环聚类的投票校正方法
+在融合语义之前，需要将相机坐标系与雷达坐标系进行对齐，对雷达和相机进行外参标定，以此得到 2 者之间的旋转和平移矩阵，这是标定后 2 者的对齐效果，点云在图像上的颜色随着距离而改变：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_pointcloud_img.png)
+
+但是标定会产生误差，这可能导致分配错误的标签，针对此问题，这篇文章提出了一种基于单个扫描环聚类的投票校正算法：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_label_correction.png)
+
+首先，将点云 lpc 分为两部分，第一部分是通过样本 SAC 模型拟合方法提取的地平面，第二部分是所有其他障碍物。
+
+地面 Ground_Plane_pc 初始被分配为 road 和 undrivable road 标签，由于标签在环境中的位置(同一水平面)可能属于同一簇。
+
+在 Obstacles_pc 点云中的每个属于相同 Ring 的点，使用欧拉聚类方法对其进行聚类，每个聚类 C 中的每个点云 p 都被赋予一个投票向量 L_vote，该算法将根据其标签概率 p.prob 为每个投票设置一个权重，然后对聚类中最有可能的标签排序，投票最高的标签被分配给聚类内的所有点，最后每个处理后的聚类与初始标为 Label_pc 的地面点云连接。
+
+#### 3.3.4 体素占有概率与标签概率
+
+Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更新占有概率。当前体素 v 的占有概率 P(v | z_1:t) 依赖于当前体素测量值 Z_t，先验概率 P(v)，和上一时刻的状态量 P(v | Z_1:t-1)，先验概率 P(v) 统一设置为 0.5。
+
+前面的语义概率标签和 3D 投影将每个点云分类为不同标签，然后我们根据每个点云的标签 c、当前标签概率 P(c | Z_t) 和上一时刻的标签类别概率 P(C_n | Z_1_t-1) 这 3 者来更新每个体素的标签概率。
+
+应用贝叶斯规则从上一时刻的概率分布估计当前时刻概率分布：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_bayes.png)
+
+然后计算对立事件的后验概率：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_post_oppsite.png)
+
+结合上面 2 式子，问题可以转换为 Binary Bayes Filter 问题：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_binary_bayes_filter.png)
+
+最后为了加速计算，使用对数概率 log odds 来表示概率，最终的概率分布更新如下：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_log_odds.png)
+
+为了改变体素的标签，我们需要集成许多属于同一标签的传感器读数，以确定其当前状态，最终一个体素 v 的标签取滤波后最大概率对应的标签：argmax_c[P(v, c1), P(v, c2), ..., P(v, c11)]
+
+### 3.4 Result
+
+本文设置 2 组实验，每组实验分别对比了 3 种语义融合方法，这里解释第一组实验，3 组语义融合方法分别为：simple projection, Projection + probability, Projection + probability + clustering：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_three_evaluation.png)
+
+实验结果如下：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_single_scan_evaluation.png)
+
+该表格对 3 种语义融合方法在相同的实验条件下分别进行了性能测试，横向表示在不同标签概率区间的评估条件，最后一项表示总的评估指标，纵向表示 3 种单帧的语义融合方法。
+
+实验的结果说明在增加了论文中的概率分布和聚类方法后，总体（Overall）的性能有了一定的提高。
+
+
+
+
+
+
 
