--- a/DataStructuresAndAlgorithms/专题 1 - 时间与空间复杂度分析.md
+++ b/DataStructuresAndAlgorithms/专题 1 - 时间与空间复杂度分析.md
@@ -1,36 +1,4 @@
-## 提纲
-
-- 为何需要分析算法复杂度？
-
-  - 算法运行依赖于运行环境
-  - 算法运行依赖于输入数据规模
-
-- 大 O 复杂度表示法
-
-- 时间复杂度分析
-
-  - 只分析循环次数最多的代码
-  - 加法法则
-  - 乘法法则
-
-- 常用的时间复杂度
-
-  - O(1)
-  - O(logn), O(nlogn)
-  - O(m + n), O(m * n)
-
-- 空间复杂度分析
-
-- 不同情况下时间复杂度分析
-
-  - 最好
-  - 最坏
-  - 平均
-  - 均摊
-
-- 复杂度分析总结
-
-  
+这周主要总结了时间复杂度的学习，跟小伙伴们分享下，欢迎指正。
 
 ## 一、为何需要分析算法复杂度
 
@@ -75,7 +43,7 @@ int cal(int n) {
 2. 计算
 3. 输出数据
 
-因为我们只是在运行前粗略地估计算法的运行时间，因此可以假设每行代码在 CPU 上运行的时间相同，都为 `cputime`，那么我们就可以直接计算出上面函数中所有代码执行的总时间（次数 x 单位时间），n 表示输入数据的规模：
+因为我们只是在运行前粗略地估计算法的运行时间，因此可以假设每行代码在 CPU 上运行的时间都相同，为 `cputime`，那么我们就可以直接计算出上面函数中所有代码执行的总时间（次数 x 单位时间），n 表示输入数据的规模：
 
 - 第 2、3、4 行：每行需要 1 个 `cpu_time`，共 $3 * cputime$
 - 第 5、6 行：因为都是循环 n 次，所以需要 $2n * cputime$
@@ -111,7 +79,7 @@ T(n) = O(2n^2 + 2n + 3)
 $$
 
 
-但是要**注意**：大 O 复杂度表示法**并不是计算代码准确的运行时间**，而是表示一种**代码执行时间随着数据规模 `n` 增长的变化趋势**，记住不是准确的时间，只是一种趋势而已，因为实际工作的算法可能需要接受很大量级的数据，通过分析算法时间与输入数据规模的变化趋势就能大概知道一个算法能不能在实际环境中很好的工作。
+但是要**注意**：大 O 复杂度表示法**并不是计算代码准确的运行时间**，而是表示一种**代码执行时间随着数据规模 `n` 增长的变化趋势**，记住不是准确的时间，只是一种趋势而已，因为实际工作的算法可能需要接受很大量级的数据，通过分析算法运行时间与输入数据规模的变化趋势就能大概知道一个算法能不能在实际环境中很好的工作。
 
 但是呢，上面的大 O 表示法还是不够简洁，比如当算法代码很多的时候，那我们是不是要在后面（或者前面）加上很多项：
 
@@ -219,7 +187,7 @@ $$
 
 ### 3.3 乘法法则
 
-类比加法法则，乘法法则就很好理解，加法是相加，乘法就是多个复杂度相乘，体现在代码中就是有多个嵌套的循环调用，比如：
+类比加法法则，乘法法则就很好理解，加法是相加，乘法就是多个复杂度相乘，体现在代码中就是有**多个嵌套的循环调用**，比如：
 
 ```c
 int cal(int n) {
@@ -282,7 +250,6 @@ while (i <= n)  {
 ```
 
 这段代码的复杂度就是分析 `i = i * 2` 的执行次数，只要求出执行次数就搞定了，学过等比数列的很容易看出，$i = 2^x$，所以当： 
-
 
 $$
 2^x = n
@@ -434,43 +401,91 @@ int find(int[] array, int n, int x) {
 
 ### 5.2 平均情况时间复杂度
 
+通常情况下，最好或者最坏时间复杂度情况发生的概率不大，所以为了表示一般情况下的复杂度，我们使用平均情况时间复杂度，这种情况需要简单的计算，不过很容易，还以上面的例子：
 
+```c
+// n 表示数组 array 的长度
+int find(int[] array, int n, int x) {
+  int i = 0;
+  int pos = -1;
+  for (; i < n; ++i) {
+    if (array[i] == x) {
+       pos = i;
+       break;
+    }
+  }
+  return pos;
+}
+```
 
+因为是平均情况所以可以做个假设，假设要查找的变量 x：
 
+- 在数组中的概率为 `1/2`
+- 不在数组中的概率也为 `1/2`
+- 出现在 0 - n-1 这 n 个数组位置的概率相同，即为 `1/n`
 
+所以根据概率乘法：要查找的数据 x 出现在数组中的任意位置的概率为 `1/2n`，先出现在数组中的概率乘以任意位置的概率，然后我们就可以将**每个元素被找到时要查找的次数**和**对应概率相乘**，最后再**相加**就得到算法的平均时间复杂度：
 
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/pinjun_fuzhadu.jpg)
 
+简单解释下：
 
+- `1 x 1/2n` 表示数组第一个元素只需要循环查找一次
+- `n x 1/2n` 表示数组最后一个元素需要循环查找 n 次
+- `n x 1/2` 表示不在数组中的元素也需要查找 n 次，因为你必须把数组元素都遍历完后才能知道当前要查找的 x 不在数组中，那肯定就在数组外面喽，前面说过在数组外面的概率也是 `1/2`
 
+那么最后的结果就是全部想加，因为可以省略系数，所以上面查找元素 x 算法的时间复杂度也是 $O(n)$。虽然存在这 3 种情况，但是实际工作中分析算法的时间复杂度时并不需要严格分析这 3 种不同情况。一般情况下，使用前面讲的复杂度分析方法得出复杂度即可，如果要详细推导的话，可以计算下平均时间复杂度。
 
+### 5.3 均摊时间复杂度
 
+这是一种特殊情况下的复杂度，并不是很常见，但还是了解下，它的主要思想是：把运行时间多的情况下的复杂度拆分，并均摊到运行时间少的情况下，看个例子：
 
+```c
+// array表示一个长度为n的数组
+// 代码中的array.length就等于n
+int[] array = new int[n];
+int count = 0;
 
+void insert(int val) {
+    if (count == array.length) {
+        int sum = 0;
+        for (int i = 0; i < array.length; ++i) {
+            sum = sum + array[i];
+        }
+        array[0] = sum;
+        count = 1;
+    }
 
+    array[count] = val;
+    ++count;
+}
+```
 
+这个算法实现如下功能，往数组中插入一个元素 val：
 
+1. 当数组满了后，对数组求和并把结果放到数组第一个元素的位置上，O(n)
+2. 当数组没满，直接插入元素 val 到空闲的位置上，O(1)
 
+利用前面学习的复杂度分析可以很容易知道这两种情况的时间复杂度分别为：`O(n)` 和 `O(1)`，但是考虑实际运行情况，我们总是先把数组一个个位置存满 O(1)，然后满了之后再执行求和的操作 O(n)，并且这两种情况的发生是有规律的。
 
+因此我们可以把比较耗时 O(n) 复杂度的求和操作的**均摊到**不太耗时的 O (1) 插入操作上，这样总体的时间复杂度就会变成 O(1)，这就是均摊的思想，总结下均摊时间复杂度的应用场景：
 
+1. 大多数情况 1 是不耗时的操作
+2. 个别情况 2 是耗时操作
+3. 情况 1 和情况 2 的操作在时间和逻辑上都是连续的，有清晰的前后执行顺序，就类似上面这个例子
 
-
-
-
-
+如果你工作中的算法满足这 3 个条件，那么可以尝试用均摊时间复杂度来分析，这种情况比较少见，但还是要知道有这样一种类型。
 
 ## 六、复杂度分析总结
 
+今天学习的时空复杂度分析是数据结构和算法学习中非常重要的一环，只有学会分析时空复杂度，我们才能知道自己写的算法到底能够提升多快，如果不会分析复杂度，那只会盲目地选择数据结构，盲目地设计算法，时间复杂度就是我们设计算法的指标。
 
+我们学习数据结构和算法的目的就是为了写出运行速度更快，存储用量更低的代码，如果都不会分析算法的执行时间和内存用量，那最后何谈学过这门课或者学会这门课呢？请务必重视复杂度分析，后面设计算法会经常用到。
 
+OK，大家下个专题见：）
 
+>  本文来自我学习极客时间中「王争 数据结构与算法之美」的个人总结，文中的代码和文章的框架参考的原文，内容是一些我自己的理解，欢迎小伙伴们一起加入学习。
 
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/geekbangs_wangzeng.jpg)
 
-
-
-
-
-
-
-
-https://blog.csdn.net/qy20115549/article/details/52849280
-
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/yingliu_code/yinliu_code.png)
