--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -150,6 +150,8 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ### 3.4 Result
 
+#### 3.4.1 实验图表分析
+
 本文设置 2 组实验，每组实验分别对比了 3 种语义融合方法，这里解释第一组实验，3 组语义融合方法分别为：simple projection, Projection + probability, Projection + probability + clustering：
 
 ![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_three_evaluation.png)
@@ -158,13 +160,63 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_single_scan_evaluation.png)
 
-该表格对 3 种语义融合方法在相同的实验条件下分别进行了性能测试，横向表示在不同标签概率区间的评估条件，最后一项表示总的评估指标，纵向表示 3 种单帧的语义融合方法。
+该表格对 3 种语义融合方法在相同的实验条件下分别进行了性能测试，横向表示在不同标签概率区间的评估条件，最后一项表示总的评估指标，纵向表示 3 种单帧的语义融合方法。实验的结果说明在增加了论文中的概率分布和聚类方法后，总体（Overall）的性能有了一定的提高。该实验在相同的条件下分别测试了 3 种不同的实验，通过对比最终的实验指标可以说明文中提出的方法具备一定的优势。
 
-实验的结果说明在增加了论文中的概率分布和聚类方法后，总体（Overall）的性能有了一定的提高。
+#### 3.4.2 实验组织形式
+
+作者在实验部分设置 2 组实验，每组内部都分别对比 3 种语义融合方法，2 组之间的实验条件不同，第一组是在单帧的点云和图像上进行融合测试，第二组是在多帧连续的点云和图像进行测试。通过设置 2 组不同测试条件的实验，可以使得实验结果更具一般性，更具说服力，以下是第二组实验的表格：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_octomap_evaluation.png)
+
+实验的结果能够说明，在不同的条件下，文章提出的新算法在性能上有一定的优势，在结论方面，作者不仅提供了实验表格，也提供了实际的建图效果，并且将新算法构建的地图与人工标注的 GroundTruth 地图进行了对比，增强了说服力，对比我自己这方面的工作，我认为这篇文章的结论比较可靠，文中的方法值得我借鉴：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_final_map.png)
+
+#### 3.4.3 实验设计思想
+
+这篇文章的实验主要采用的是控制变量法，即保持测试条件不变，通过改变运行的算法，来对比得出新算法相比于普通算法的提升，这种实验方法很常见，如果是在已有的算法上进行的改进，在设计实验时可以使用这种实验设计思路，不过这篇文章没有对比同类文献的效果，仅仅是文中提出的不同算法之间的对比。
+
+#### 3.4.4 缺陷与讨论
+
+虽然算法的效果有一定的提升，但是还是存在缺陷，影响算法的一个主要方面就是雷达和相机外参标定的精度问题，这个精度会直接影响语义地图构建的准确性，所以如何在算法中进一步考虑标定的误差是将来的一个研究方向。
+
+#### 3.4.5 启发与思考
+
+目前我的研究工作与这篇文章类似，只不过算法的工作环境不同，这篇文章是在城市中进行的实验，而我这是在野外环境进行测试。我目前工作的总体框架在这篇文章的基础上做了改进，修改了语义分割模块的实现，但是目前算法的效果还不是很好，主要原因是标定的精度不够，以及文中的一个聚类优化算法还没有加入我的算法中，这也是我后续准备要做的工作。
+
+对比我的工作，在这篇文章的基础上可以增加导航功能，因为这篇文章只是单纯构建一个大范围的语义地图，并没有介绍在实际环境中使用这个地图，所以一个可以选择的方向就是把实际的应用考虑进去。
+
+## 4 阅读多篇
+
+论文还没找完。。。
+
+### 4.1 论文结构
 
 
 
+### 4.2 摘要和引言
 
 
 
+### 4.3 研究方法的结构
+
+
+
+### 4.4 结论中图标的表示
+
+
+
+### 4.5 讨论部分的结构
+
+
+
+### 4.6 参考文献的区别
+
+
+
+### 4.7 语法时态的规律
+
+
+
+### 4.8 写类似论文的思路
 
