update rosdebug ws

--- a/MachineLearning/从 0 开始机器学习 - 应用机器学习算法的一些建议.md
+++ b/MachineLearning/从 0 开始机器学习 - 应用机器学习算法的一些建议.md
@@ -42,7 +42,25 @@
 
 以上的 3 个误差均为平方误差代价函数，只是在不同的数据集上进行的计算：
 
-公式
+
+$$
+J_{train} \left( \theta \right) = \frac{1}{2m}\sum\limits_{i=1}^m \left( h_{\theta}(x^{(i)})-y^{(i)} \right)^{2}
+$$
+
+
+
+$$
+J_{cv} \left( \theta \right) = \frac{1}{2m_{cv}}\sum\limits_{i=1}^{m_{cv}} \left( h_{\theta}(x_{cv}^{(i)})-y_{cv}^{(i)} \right)^{2}
+$$
+
+
+
+$$
+J_{test} \left( \theta \right) = \frac{1}{2m_{test}}\sum\limits_{i=1}^{m_{test}} \left( h_{\theta}(x_{test}^{(i)})-y_{test}^{(i)} \right)^{2}
+$$
+
+
+
 
 接下来我们分别在训练集和交叉验证集上用曲线做对比分析，以此来分析当前算法存在**高偏差问题**还是**高方差问题**。
 
@@ -130,6 +148,14 @@
 除了以上的多项式次数、正则化系数与误差的关系之外，还有一种很重要的称为「学习曲线」的关系，它主要用来说明交叉验证误差和训练集误差随着样本数量变化的关系，可以用这个曲线帮助我们判断一个算法在给定样本规模的情况下是否存在偏差或者方差的问题。
 
 我们还是分析以下 2 个代价函数误差：
+$$
+J_{train} \left( \theta \right) = \frac{1}{2m}\sum\limits_{i=1}^m \left( h_{\theta}(x^{(i)})-y^{(i)} \right)^{2}
+$$
+
+$$
+J_{cv} \left( \theta \right) = \frac{1}{2m_{cv}}\sum\limits_{i=1}^{m_{cv}} \left( h_{\theta}(x_{cv}^{(i)})-y_{cv}^{(i)} \right)^{2}
+$$
+
 
 我们把这 2 者和样本数量的关系画成学习曲线：
 
