add ml next step

--- a/MachineLearning/ml_blogs/从 0 开始机器学习 - 应用机器学习算法的一些建议.md
+++ b/MachineLearning/ml_blogs/从 0 开始机器学习 - 应用机器学习算法的一些建议.md
@@ -20,7 +20,9 @@
 
 在学习诊断法之前，需要先对训练数据集进行处理，对于特征变量比较少的情况，我们可以直接画出假设函数在训练集上的拟合效果，比如：
 
-![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/evaluating_hypothesis.png)
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/train_cv_test.jpg)
+
+
 
 但是当特征数量很多以至于不能用曲线表示拟合效果时，就需要用另外一种代价函数误差指标的方法来衡量假设函数的拟合效果，为此需要把原始数据集进行拆分：
 
@@ -73,6 +75,10 @@ $$
 
 通过前面拆分的训练集合交叉验证集，我们可以画出一个模型的多项式次数 - 代价函数误差的曲线，以此通过曲线来帮助我们分析当前的模型是欠拟合还是过拟合，比如下面的曲线：
 
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/d_fitting_crave.jpg)
+
+
+
 解释下：
 
 - 横坐标代表假设函数（模型）的多项式次数 `d`
@@ -82,7 +88,9 @@ $$
 
 从上面的曲线中我们可以发现 3 个关键位置及其含义：
 
-图片
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/error_bias_variance.jpg)
+
+
 
 ### 3.1 多项式次数 d 较小
 
@@ -111,7 +119,9 @@ $$
 
 如：
 
-![](http://www.ai-start.com/ml2014/images/2ba317c326547f5b5313489a3f0d66ce.png)
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/multi_lamda .jpg)
+
+
 
 为了分析正则化系数对模型的影响，我们同样可以在前面的 3 个数据集上进行多组不同正则化系数模型的误差计算：
 
@@ -122,7 +132,7 @@ $$
 
 在这个过程中，我们可以画出正则化系数与代价函数误差的关系：
 
-![](http://www.ai-start.com/ml2014/images/38eed7de718f44f6bb23727c5a88bf5d.png)
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/error_bias_variance_lambda.jpg)
 
 解释下曲线上关键的 3 个位置：
 
@@ -148,16 +158,29 @@ $$
 除了以上的多项式次数、正则化系数与误差的关系之外，还有一种很重要的称为「学习曲线」的关系，它主要用来说明交叉验证误差和训练集误差随着样本数量变化的关系，可以用这个曲线帮助我们判断一个算法在给定样本规模的情况下是否存在偏差或者方差的问题。
 
 我们还是分析以下 2 个代价函数误差：
+
+
 $$
 J_{train} \left( \theta \right) = \frac{1}{2m}\sum\limits_{i=1}^m \left( h_{\theta}(x^{(i)})-y^{(i)} \right)^{2}
 $$
+
+
+
 
 $$
 J_{cv} \left( \theta \right) = \frac{1}{2m_{cv}}\sum\limits_{i=1}^{m_{cv}} \left( h_{\theta}(x_{cv}^{(i)})-y_{cv}^{(i)} \right)^{2}
 $$
 
 
+
+
 我们把这 2 者和样本数量的关系画成学习曲线：
+
+
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/error_size_m.jpg)
+
+
 
 因为是分析样本数量与这 2 个误差的关系，所以我们分 2 种情况来讨论。
 
@@ -165,7 +188,9 @@ $$
 
 当模型欠拟合时，比如多项式次数太少（特征太少了），不管把样本数量增大到多少，训练集误差和交叉验证集误差都不会下降很多，这种情况就说明我们的模型存在高偏差问题，也就是欠拟合了：
 
-![](http://www.ai-start.com/ml2014/images/4a5099b9f4b6aac5785cb0ad05289335.jpg)
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/hight_bias.jpg)
+
+
 
 这种情况下，如果你不用学习曲线来分析，而是直接凭感觉出发觉得我应该多增加一些数据，这样模型的拟合效果应该会更好，那就选错了优化的方向，从曲线上来看，不管你增加多少样本，误差是不会降低的。
 
@@ -173,7 +198,9 @@ $$
 
 现在假设我们有一个非常高次的多项式模型（特征很多），并且正则化系数很小时，如果训练样本数很少，那么在训练集上会过拟合，导致在交叉验证集上误差较大（过拟合不能很好的适应新样本），而当增加样本数量的时候，因为我们模型有足够多的特征，所以不会轻易的过拟合，这样随着数量增多，训练集和交叉验证集的误差都会减小：
 
-![](http://www.ai-start.com/ml2014/images/2977243994d8d28d5ff300680988ec34.jpg)
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/high_variance.jpg)
+
+
 
 简单总结下就是：
 
