local map time fun is ok

--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -192,9 +192,15 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ### 4.1 论文结构
 
-
+所找的论文结构按顺序基本都分为 5 部分：INTRODUCTION，RELATED WORK，METHOD，EXPERIMENTS，CONCLUSION，这也是常见的科研论文的写作结构，论文中基本都是先介绍方法再介绍实验，讨论部分基本都包含在 CONCLUSION 部分，这部分首先是对文章所阐述的算法进行总结，然后提出一些将来可以继续研究的方向。
 
 ### 4.2 摘要和引言
+
+在摘要结构方面，我总结了 2 种写作结构，第一种：研究背景与目的、研究方法的简介、实验效果的总结，第二种：研究背景与目的、已有方法的步骤、改进方法的简介、实验效果的总结。基本上都是这 2 种结构或者类似，并且在方法简介部分，部分论文单独分模块进行介绍，而部分则是一段总结性的文字，就阅读体验来看，分模块写作更加适合阅读。
+
+
+
+
 
 
 
@@ -202,7 +208,7 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 
 
-### 4.4 结论中图标的表示
+### 4.4 结论中图表的表示
 
 
 
