--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -188,8 +188,6 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ## 4 阅读多篇
 
-论文还没找完。。。
-
 ### 4.1 论文结构
 
 所找的论文结构按顺序基本都分为 5 部分：INTRODUCTION，RELATED WORK，METHOD，EXPERIMENTS，CONCLUSION，这也是常见的科研论文的写作结构，论文中基本都是先介绍方法再介绍实验，讨论部分基本都包含在 CONCLUSION 部分，这部分首先是对文章所阐述的算法进行总结，然后提出一些将来可以继续研究的方向。
@@ -198,17 +196,35 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 在摘要结构方面，我总结了 2 种写作结构，第一种：研究背景与目的、研究方法的简介、实验效果的总结，第二种：研究背景与目的、已有方法的步骤、改进方法的简介、实验效果的总结。基本上都是这 2 种结构或者类似，并且在方法简介部分，部分论文单独分模块进行介绍，而部分则是一段总结性的文字，就阅读体验来看，分模块写作更加适合阅读。
 
+在引言部分，主要分为 4 个部分：研究背景与意义、研究现状与不足、论文方法的简介、论文所做工作的总结。在研究背景部分，基本都从论文所解决的问题的必要性出发，引出要解决该问题所需要的技术，进而描述现有的研究方法所做的工作，并描述不足之处。之后一般会简单介绍论文所使用方法，主要分模块介绍每个部分的功能，在引言的最后一般都总结本篇文章所做的工作，例如：
 
-
-
-
-
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_summary.png)
 
 ### 4.3 研究方法的结构
 
-
+研究方法部分一般都分模块单独介绍，在开头一般对该模块的作用做个简介，并阐述常用的方法，之后对文章采用的方法进行具体的论述。在算法部分，一般都是先介绍算法的输入输出，给出算法的伪代码，再对关键的步骤进行解释。在公式部分，一般先阐述所需公式的作用及参数含义，再给出公式或者先给公式再阐述含义。
 
 ### 4.4 结论中图表的表示
+
+对于图片，一般先总结性地介绍实验结果图片要表达的含义，然后对每个图片单独进行详细地解释，会用类似「注意到」等词语提醒读者正在阅读关键的部分，并且在阐述最好的效果或者文章方法的效果时，会与基准方法做对比。
+
+在格式方面，一般用较小的字号，居中对齐，如果有多幅图片，则在每个单独的图片下面进行标注，总体再进行标注，总结标注的字号要略微大一些，比如：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_fig.png)
+
+在表格方面，也是先阐述实验表格的含义，
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
