--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -36,9 +36,7 @@
 
 
 
-然后对精炼后的结果进行排序。
-
-
+然后对精炼后的结果进行排序，并粗略阅读论文标题，发现合适的再详细看摘要，如果确定了一篇论文，就导入 EndNote 中，作为待阅读的论文。论文查找完后，先粗略的阅读论文的摘要，引言和实验结果部分，这主要确定一篇论文是否值得精读，如果确定文章对自己有价值则进行加星标注，作为最终确定要精读的文章。
 
 ## 3 精读一篇
 
@@ -212,33 +210,27 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_fig.png)
 
-在表格方面，也是先阐述实验表格的含义，
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+在表格方面，也是先阐述实验表格的含义，然后对提升较大的指标进行详细的对比分析，重点介绍自己方法的优势。
 
 ### 4.5 讨论部分的结构
 
-
+通常讨论部分包含在总结中，总结部分的一般分 2 段进行阐述，第一段先对文中的方法再次进行总结，并总结实验结果，在第二段主要说明当前方法还存在的不足之处，可以从多个方面进行说明，之后对不足之处提出目前可行但是还没有尝试的解决方法，以此作为将来可以继续完善的工作。
 
 ### 4.6 参考文献的区别
 
+我选择的这几篇文章的参考文献基本都是使用下面这种格式，在 EndNote 中有对应的格式：
 
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/IROS_references.png)
 
 ### 4.7 语法时态的规律
 
-
+- 摘要：现在时
+- 
 
 ### 4.8 写类似论文的思路
 
+因为之前没有写过小论文，所以顶会论文的写作方法对自己很有帮助，如果目前我来写语义地图主题的论文，本着科学严谨的态度，我会先从理论和实验入手，把论文要介绍的方法在理论和实验中进行验证，在确定了方法具有一定的提升后，再学习顶会论文的写作结构和语言风格，一步步写自己的论文。
+
+我觉得一篇论文最重要的是要有东西可以写，也就是自己要真正能从理论上或者实验中验证自己提出的新方法有提升和创新点，只有找到可以写的点，再围绕着这个点进行展开，这样论文写作才能按部就班的写下去，如果什么都没有做，对自己提出的方法都不是很了解，就开始写论文，往往会陷入不知道下一步该写什么的状况，这样不仅效率低下，而且最后的成果也不一定能被审稿人认可。
+
+因此我的总体写作路线是：做实验验证自己的方法，学习顶会写作结构，写论文。
