--- a/MachineLearning/从 0 开始机器学习 - 机器学习系统的设计.md
+++ b/MachineLearning/从 0 开始机器学习 - 机器学习系统的设计.md
@@ -1,9 +1,3 @@
-提纲：
-
-1. 构建一个机器学习算法的推荐步骤
-2. 误差分析
-3. 数据规模
-
 ## 一、构建算法的推荐步骤
 
 当我们遇到一个问题，比如预测房价，我们想要用机器学习算法来更好的解决这个问题，推荐的步骤如下：
@@ -55,22 +49,44 @@
 
 ### 2.2 查准率与查全率
 
+为了解决这个问题，使用查准率（Precision）和查全率（Recall）这 2 个误差指标，为了计算这 2 者，我们需要把算法预测的结果分为以下 4 种：
 
+1. 正确肯定（True Positive，TP）：预测为真，实际为真
+2. 正确否定（True Negative，TN）：预测为假，实际为假
+3. 错误肯定（False Positive，FP）：预测为真，实际为假
+4. 错误否定（False Negative，FN）：预测为假，实际为真
 
+把这 4 个写到表格里面：
 
+| 实际值 \ 预测值 |          |          |
+| :-------------: | :------: | :------: |
+|                 | Positive | Negative |
+|    Positive     |    TP    |    FN    |
+|    Negative     |    FP    |    TN    |
 
+然后我们就可以定义这 2 个指标啦：
 
+- 查准率 = `TP / (TP + FP)`：预测为真（恶性肿瘤）的情况中，实际为真（恶性肿瘤）的比例，越高越好
+- 查全率 = `TP / (TP + FN)`：实际为真（恶性肿瘤）的情况中，预测为真（恶性肿瘤）的比例，越高越好
 
-
-
-
-
-
-
-
-
-
-
-
+有了这 2 个指标我们再来分析下上面的算法性能，第一个人为的算法认为所有的肿瘤都是良性的，也就等价于原样本中 5 个恶性的肿瘤样本一个都没有预测成功，也即所有恶性肿瘤样本，该算法成功预测恶性肿瘤的比例为 0，所以查全率为 0，这说明该算法的效果并不好。
 
 ### 2.3 查准率与查全率的整合
+
+在实际的使用中，查准率和查全率往往不能很好的权衡，要想保持两者都很高不太容易，通过使用以下的公式来整合这 2 个评价指标可以帮助我们直接看出一个算法的性能优劣：
+
+
+$$
+F_1 Score = 2 \frac {PR} {P + R}
+$$
+
+
+以后评价一个算法的性能直接比较 F1 Score 即可，这就大大方便了我们对比算法的性能。
+
+## 三、机器学习的样本规模
+
+除了评价指标，还有一个要关心的问题就是样本的规模，在机器学习领域有一句话：「取得成功的人不是拥有最好算法的人，而是拥有最多数据的人」，这句话的意思就是说当我们拥有非常多的数据时，选择什么样的算法不是最最重要的，一些在小样本上表现不好的算法，经过大样本的训练往往也能表现良好，比如下面这 4 种算法在很大样本上训练后的效果相差不是很大，但是在小样本时有挺大差距：
+
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/train_set_size.png)
+
+但在实际的机器学习算法中，为了能够使得训练数据发挥最大效用，我们往往会选一个比较好的模型（不太容易欠拟合，比如神经网络），再加上很多的样本数据（防止过拟合），通过这 2 者就可以让一个算法变的很强大，所以以后当你设计机器学习算法的时候一定要考虑自己的样本规模，选择合适的模型适应你的数据，如果你有很多很多的数据，那么可以选择复杂一点的模型，不能白白浪费你的数据！
