--- a/PaperWrite/文献检索写作草稿.md
+++ b/PaperWrite/文献检索写作草稿.md
@@ -26,17 +26,19 @@
 
 在检索前设置检索时间跨度为 2016 - 2020 年，以 semantic 3D mapping 关键字为例检索结果如下：
 
-
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/result_search_1.png)
 
 因为检索结果很多，所以首先分析检索结果，选择英国、美国地区进行过滤：
 
-
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/search_region.png)
 
 在过滤地区后的检索结果中，再次对结果进行精炼选择，主要对出版物类别、文献类型、出版机构、出版物的来源这 4 项进行单独或者结合的精炼：
 
-
+![](https://dlonng.oss-cn-shenzhen.aliyuncs.com/blog/search_jinglian.png)
 
 然后对精炼后的结果进行排序，并粗略阅读论文标题，发现合适的再详细看摘要，如果确定了一篇论文，就导入 EndNote 中，作为待阅读的论文。论文查找完后，先粗略的阅读论文的摘要，引言和实验结果部分，这主要确定一篇论文是否值得精读，如果确定文章对自己有价值则进行加星标注，作为最终确定要精读的文章。
+
+目前我研究领域热度一般，主要的研究大牛有 Julie Stephany Berrio, Jongmin Jeong 等，选择这 6 篇文章的主要标准有：会议是否为顶会、文章的方法，实验效果。
 
 ## 3 精读一篇
 
@@ -224,8 +226,9 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 
 ### 4.7 语法时态的规律
 
-- 摘要：现在时
-- 
+摘要一般用现在时。引言部分描述目前的研究进展一般用现在时，如果描述过去做的实验等用过去时，描述自己的工作用现在时。相关研究部分对于其他作者的研究工作一般用现在时描述。方法描述部分如果用到一些已有的方法，在对这些方法介绍时使用过去时，其他的一般描述使用现在时。实验结果部分因为是过去做的实验，所以一般用过去时态描述实验过程和结。最后在总结部分如果是对文章的总结用现在时，对实验结果的分析使用过去时，对于将来可以改进的建议，使用将来时。
+
+在一段话中可以存在多个时态，比如总结部分，可以先用现在时总结文章的方法，然后使用过去时态描述自己实验结果的性能提升，再用将来时提出将来可以改进的方向。
 
 ### 4.8 写类似论文的思路
 
@@ -234,3 +237,7 @@ Octomap 可以为八叉树地图的每个点云生成对应的体素，并且更
 我觉得一篇论文最重要的是要有东西可以写，也就是自己要真正能从理论上或者实验中验证自己提出的新方法有提升和创新点，只有找到可以写的点，再围绕着这个点进行展开，这样论文写作才能按部就班的写下去，如果什么都没有做，对自己提出的方法都不是很了解，就开始写论文，往往会陷入不知道下一步该写什么的状况，这样不仅效率低下，而且最后的成果也不一定能被审稿人认可。
 
 因此我的总体写作路线是：做实验验证自己的方法，学习顶会写作结构，写论文。
+
+## 5 总结
+
+通过文献检索课程，我基本了解了科研的流程，并用到目前的科研中，导师给出一个课题，我能够按照课上介绍的方法一步步检索，查找到关键的论文，然后阅读最终找到可以使用的方法，整个课程对我的帮助很大，一个有效率的科研方法比重复的耗时间找论文效率要高很多，谢谢吴老师一学期的付出。
